almost almost done (without adaptive)

--- a/src/index.html
+++ b/src/index.html
@@ -276,6 +276,77 @@
   </div>
 </div>
 
+<div class="yellow">
+  <div class="yellow-dark"></div>
+  <div class="yellow-light"></div>
+  <div class="yellow-content">
+    <div class="yellow-content-info">
+     <h2 class="yellow-content-info__title"><strong> Sign up for FREE!</strong></h2>
+     <p class="yellow-content-info__subtitle">Get started in minutes. Why not kick the tires with a website migration?</p>
+<form class="yellow-content-info-form">
+  <input type="email"  placeholder="enter your email address" name="text" class="yellow-content-info-form__email">
+   <input type="submit" value="Sign Up FREE" class="yellow-content-info-form__submit">
+  </form>
+ </body>
+</html>
 
+</form>
+    </div>
+  </div>
+  
+</div>
+
+<div class="footer">
+  <div class="footer-content">
+    <div class="footer-content-about">
+      <p class="footer-content-about__title">About</p>
+      <p class="footer-content-about__company">Company</p>
+      <div class="footer-content-about-careers">
+        <p class="footer-content-about-careers__careers">Careers</p>
+        <p class="footer-content-about-careers__hiring">We're Hiring!</p>
+      </div>
+      <p class="footer-content-about__leadership">Leadership</p>
+      <p class="footer-content-about__newsroom">Newsroom</p>
+    </div>
+    <div class="footer-content-products">
+      <p class="footer-content-products__title">Products</p>
+      <p class="footer-content-products__why">Why Pantheon?</p>
+      <p class="footer-content-products__solutions">Industry Solutions</p>
+      <p class="footer-content-products__hosting">Web Hosting</p>
+      <p class="footer-content-products__plans">Plans & Pricing</p>
+    </div>
+    <div class="footer-content-partners">
+      <p class="footer-content-partners__title">Partners</p>
+      <p class="footer-content-partners__agency">Agency Program</p>
+      <p class="footer-content-partners__google">Google Partnership</p>
+      <p class="footer-content-partners__reseller">Reseller Program</p>
+      <p class="footer-content-partners__new">New Partner</p>
+    </div>
+    <div class="footer-content-popular">
+      <p class="footer-content-popular__title">Popular</p>
+      <p class="footer-content-popular__new">What's New?</p>
+      <p class="footer-content-popular__events">Events</p>
+      <p class="footer-content-popular__status">Platform Status</p>
+      <p class="footer-content-popular__demo">Pantheon Demo</p>
+    </div>
+    <div class="footer-content-connect">
+      <p class="footer-content-connect__title">Connect</p>
+      <p class="footer-content-connect__contact">Contact Us</p>
+      <p class="footer-content-connect__number">1-855-927-9387</p>
+      
+    </div>
+    
+  </div>
+</div>
+<div class="footer-content-wrap">
+<div class="footer-content-info">
+  <span class="footer-content-info__copyright">@ 2022 Pantheon Systems, Inc.</span>
+<span class="footer-content-info__privacy">Privacy Policy</span>
+<span class="footer-content-info__data">Data Subject Request</span>
+<span class="footer-content-info__policy">Cookie Policy</span>
+<span class="footer-content-info__terms">Terms of Use</span>
+<span class="footer-content-info__statement">Accessibility Statement</span>
+</div>
+</div>
   </body>
 </html>
